# niiterm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.html  styles.css
docs/assets/: README.md
src/: cli.rs  dwi.rs  lib.rs  main.rs  modality.rs  nifti_io.rs  oneshot.rs  render.rs  stats.rs  windowing.rs
src/tui/: app.rs  mod.rs  view.rs
tests/: header.rs  integration.rs
